# discord-status-changer

./: .gitignore  README.md  pyproject.toml
discord_status_changer/: config.py  install.sh  logger.py  status_changer.py
